//	This file was auto-generated by Protomak. Do not edit!


package edu.vanderbilt.isis.meta;
import "XsdTypes.proto";

message AccelerationType {
	required string Units = 1;
	optional ID _id = 2;
	required double x = 3;
	required double y = 4;
	required double z = 5;
}

message AnalysesType {
	repeated BallisticType Ballistic = 1;
	repeated FEAType FEA = 2;
	repeated InterferenceType Interference = 3;
	repeated ToleranceType Tolerance = 4;
	optional ID _id = 5;
}

message AnalysisComponentsType {
	repeated ComponentType Component = 1;
	optional ID _id = 2;
}

message AnalysisConstraintType {
	optional BallType Ball = 1;
	optional DisplacementType Displacement = 2;
	optional GeometryType Geometry = 3;
	optional PinType Pin = 4;
	optional ID _id = 5;
}

message AnalysisConstraintsType {
	repeated AnalysisConstraintType AnalysisConstraint = 1;
	optional ID _id = 2;
}

message AssembliesType {
	repeated AssemblyType Assembly = 1;
	optional DataExchangeType DataExchange = 2;
	repeated MaterialsType Materials = 3;
	optional UnassembledComponentsType UnassembledComponents = 4;
	repeated AssembliesType Assemblies = 5;
	required string VersionInfo = 6;
	optional ID _id = 7;
}

message AssemblyType {
	optional AnalysesType Analyses = 1;
	optional CADComponentType CADComponent = 2;
	optional ComputationsType Computations = 3;
	required PropertiesType Properties = 4;
	required string ConfigurationID = 5;
	optional ID _id = 6;
}

message AxialDisplacementType {
	required string Property = 1;
	optional ID _id = 2;
}

message AxialRotationType {
	required string Property = 1;
	optional ID _id = 2;
}

message BallType {
	optional ID _id = 1;
}

message BallisticType {
	optional ReferencePlaneType ReferencePlane = 1;
	optional ShotlinesType Shotlines = 2;
	required string AnalysisID = 3;
	optional ID _id = 4;
}

message BoundingBoxType {
	required string ComponentID = 1;
	required string MetricID = 2;
	required string RequestedValueType = 3;
	optional ID _id = 4;
}

message CADComponentType {
	repeated CADComponentType CADComponent = 1;
	repeated ConstraintType Constraint = 2;
	optional KinematicConnectionsType KinematicConnections = 3;
	optional ParametricParametersType ParametricParameters = 4;
	required string ComponentID = 5;
	required string MaterialID = 6;
	required string Name = 7;
	required string SpecialInstruction = 8;
	optional bool Standalone = 9;
	required string Type = 10;
	optional ID _id = 11;
}

message CADParameterType {
	optional UnitsType Units = 1;
	required string Name = 2;
	required string Type = 3;
	required string Value = 4;
	optional ID _id = 5;
}

message CenterOfGravityType {
	required string ComponentID = 1;
	required string MetricID = 2;
	required string RequestedValueType = 3;
	optional ID _id = 4;
}

message ComponentType {
	optional MetricsType Metrics = 1;
	required string ComponentID = 2;
	required bool InfiniteCycle = 3;
	optional ID _id = 4;
}

message ComputationsType {
	repeated BoundingBoxType BoundingBox = 1;
	repeated CenterOfGravityType CenterOfGravity = 2;
	repeated MassType Mass = 3;
	repeated PointCoordinatesType PointCoordinates = 4;
	optional ID _id = 5;
}

message ConditionType {
	required string Name = 1;
	required string Units = 2;
	required double Value = 3;
	optional ID _id = 4;
}

message ConditionsType {
	repeated ConditionType Condition = 1;
	optional ID _id = 2;
}

message ConstraintFeatureType {
	required string ComponentID = 1;
	required string FeatureName = 2;
	required string FeatureOrientationType = 3;
	optional ID _id = 4;
}

message ConstraintOffsetType {
	optional UnitsType Units = 1;
	required string OffsetAlignmentType = 2;
	required double Value = 3;
	optional ID _id = 4;
}

message ConstraintType {
	repeated PairType Pair = 1;
	optional ID _id = 2;
}

message DataExchangeType {
	repeated STEPFormatType STEPFormat = 1;
	optional ID _id = 2;
}

message DisplacementType {
	required RotationType Rotation = 1;
	required TranslationType Translation = 2;
	optional ID _id = 3;
}

message FEAType {
	optional AnalysisComponentsType AnalysisComponents = 1;
	optional AnalysisConstraintsType AnalysisConstraints = 2;
	optional ConditionsType Conditions = 3;
	optional LoadsType Loads = 4;
	optional PartInterfacesType PartInterfaces = 5;
	required SolversType Solvers = 6;
	repeated SurfaceTreatmentsType SurfaceTreatments = 7;
	required string AnalysisID = 8;
	required string Type = 9;
	optional ID _id = 10;
}

message FeatureType {
	required string ComponentID = 1;
	required string Name = 2;
	optional ID _id = 3;
}

message FeaturesType {
	repeated FeatureType Feature = 1;
	required string FeatureGeometryType = 2;
	required string FeatureID = 3;
	required string FeatureInterfaceType = 4;
	required string GeometryType = 5;
	required string PrimaryGeometryQualifier = 6;
	required string SecondaryGeometryQualifier = 7;
	optional ID _id = 8;
}

message FixedType {
	repeated KinematicFeatureType KinematicFeature = 1;
	required double CFM = 2;
	required string ConnectedComponentID = 3;
	required string ConnectionID = 4;
	required double ERP = 5;
	required string FeatureInterfaceType = 6;
	optional ID _id = 7;
}

message ForceMomentType {
	required ForceType Force = 1;
	required MomentType Moment = 2;
	optional ID _id = 3;
}

message ForceType {
	required string Units = 1;
	optional ID _id = 2;
	required double x = 3;
	required double y = 4;
	required double z = 5;
}

message GeometryType {
	repeated FeaturesType Features = 1;
	repeated SetOperationType SetOperation = 2;
	optional ID _id = 3;
}

message InterferenceType {
	required string AnalysisID = 1;
	optional ID _id = 2;
}

message KinematicConnectionsType {
	repeated FixedType Fixed = 1;
	repeated PrismaticType Prismatic = 2;
	repeated RevoluteType Revolute = 3;
	repeated SphericalType Spherical = 4;
	optional ID _id = 5;
}

message KinematicFeatureType {
	required string ComponentID = 1;
	required string DatumName = 2;
	required string FeatureGeometryType = 3;
	optional ID _id = 4;
}

message LoadType {
	optional AccelerationType Acceleration = 1;
	optional ForceMomentType ForceMoment = 2;
	optional GeometryType Geometry = 3;
	optional PressureType Pressure = 4;
	optional ID _id = 5;
}

message LoadsType {
	repeated LoadType Load = 1;
	optional ID _id = 2;
}

message MassType {
	required string ComponentID = 1;
	required string MetricID = 2;
	required string RequestedValueType = 3;
	optional ID _id = 4;
}

message MaterialPropertyType {
	required string PropertyName = 1;
	required string Units = 2;
	required double Value = 3;
	optional ID _id = 4;
}

message MaterialType {
	repeated MaterialPropertyType MaterialProperty = 1;
	required string MaterialID = 2;
	required string MaterialName = 3;
	required string Type = 4;
	optional ID _id = 5;
}

message MaterialsType {
	repeated MaterialType Material = 1;
	optional ID _id = 2;
}

message MetricType {
	required string ID = 1;
	required string Type = 2;
	optional ID _id = 3;
}

message MetricsType {
	repeated MetricType Metric = 1;
	optional ID _id = 2;
}

message MomentType {
	required string Units = 1;
	optional ID _id = 2;
	required double x = 3;
	required double y = 4;
	required double z = 5;
}

message PairType {
	required ConstraintFeatureType ConstraintFeatureA = 1;
	required ConstraintFeatureType ConstraintFeatureB = 2;
	optional ConstraintOffsetType ConstraintOffset = 3;
	required string FeatureAlignmentType = 4;
	required string FeatureGeometryType = 5;
	required string FeatureInterfaceType = 6;
	optional ID _id = 7;
}

message ParametricParametersType {
	repeated CADParameterType CADParameter = 1;
	optional ID _id = 2;
}

message PartInterfaceType {
	required string ComponentID_1 = 1;
	required string ComponentID_2 = 2;
	required string Type = 3;
	optional ID _id = 4;
}

message PartInterfacesType {
	repeated PartInterfaceType PartInterface = 1;
	optional ID _id = 2;
}

message PinType {
	required AxialDisplacementType AxialDisplacement = 1;
	required AxialRotationType AxialRotation = 2;
	optional ID _id = 3;
}

message PointCoordinatesType {
	required string ComponentID = 1;
	required string FeatureDatumName = 2;
	required string MetricID = 3;
	required string RequestedValueType = 4;
	optional ID _id = 5;
}

message PressureType {
	required string Units = 1;
	required double Value = 2;
	optional ID _id = 3;
}

message PrismaticType {
	repeated KinematicFeatureType KinematicFeature = 1;
	required double CFM = 2;
	required string ConnectedComponentID = 3;
	required string ConnectionID = 4;
	required double ERP = 5;
	required string FeatureInterfaceType = 6;
	optional ID _id = 7;
}

message PropertiesType {
	optional UnitsType Units = 1;
	optional ID _id = 2;
}

message ReferencePlaneType {
	required string Type = 1;
	optional ID _id = 2;
}

message RevoluteType {
	repeated KinematicFeatureType KinematicFeature = 1;
	required double CFM = 2;
	required string ConnectedComponentID = 3;
	required string ConnectionID = 4;
	required double ERP = 5;
	required string FeatureInterfaceType = 6;
	optional ID _id = 7;
}

message RotationType {
	required string Units = 1;
	optional ID _id = 2;
	required string x = 3;
	required string y = 4;
	required string z = 5;
}

message STEPFormatType {
	required string Name = 1;
	optional ID _id = 2;
}

message SetOperationType {
	required string FeatureID = 1;
	required string Type = 2;
	optional ID _id = 3;
}

message ShotlineType {
	required double Azimuth = 1;
	required string BallisticThreatRef = 2;
	required string ComponentID = 3;
	required string DatumPoint = 4;
	required double Elevation = 5;
	optional ID _id = 6;
}

message ShotlinesType {
	repeated ShotlineType Shotline = 1;
	optional ID _id = 2;
}

message SolverType {
	required string ElementShapeType = 1;
	required string MeshType = 2;
	required string ShellElementType = 3;
	required string Type = 4;
	optional ID _id = 5;
}

message SolversType {
	repeated SolverType Solver = 1;
	optional ID _id = 2;
}

message SphericalType {
	repeated KinematicFeatureType KinematicFeature = 1;
	required double CFM = 2;
	required string ConnectedComponentID = 3;
	required string ConnectionID = 4;
	required double ERP = 5;
	required string FeatureInterfaceType = 6;
	optional ID _id = 7;
}

message SurfaceTreatmentType {
	optional GeometryType Geometry = 1;
	optional string AdjoiningParts = 2;
	optional ID _id = 3;
}

message SurfaceTreatmentsType {
	repeated SurfaceTreatmentType SurfaceTreatment = 1;
	optional ID _id = 2;
}

message ToleranceType {
	required string AnalysisID = 1;
	optional ID _id = 2;
}

message TranslationType {
	required string Units = 1;
	optional ID _id = 2;
	required string x = 3;
	required string y = 4;
	required string z = 5;
}

message UnassembledComponentsType {
	repeated CADComponentType CADComponent = 1;
	optional ID _id = 2;
}

message UnitsType {
	required string Value = 1;
	optional ID _id = 2;
}

